--- a/views/sign_up.ejs
+++ b/views/sign_up.ejs
@@ -87,7 +87,7 @@
               <form action="/user/create" method="post">
                 <div class="input-group">
                   <label>Name</label>
-                  <input type="text" placeholder="Enter Name" required />
+                  <input type="text" placeholder="Enter Name" required name="name"/>
                 </div>
                 <div class="input-group">
                   <label>Email</label>
@@ -155,14 +155,8 @@
                 }).show();
               <% } %>
     </script>
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
-    ></script>
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
-    ></script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   </body>
 </html>
 
