--- a/views/order_placed.ejs
+++ b/views/order_placed.ejs
@@ -68,7 +68,7 @@
             
             
             <button class="text-gray-800 text-2xl font-semibold">
-                <a href="/profile">See Order History</a>
+                <a href="/product/order-history">See Order History</a>
             </button>
             
         </div>
