--- a/views/women.ejs
+++ b/views/women.ejs
@@ -21,10 +21,10 @@
     <div class="topnavbar">
       <div class="category">
         <button onclick="onButtonChange('men')" id="men" class="gender">
-         <a href="/">MAN</a> 
+          <a href="./">MAN</a>
         </button>
         <button onclick="onButtonChange('women')" id="women" class="gender">
-         <a href="/women"> WOMEN </a>
+          <a href="/women"> WOMEN </a>
         </button>
       </div>
     </div>
@@ -118,10 +118,13 @@
         <!-- arrows for slider -->
         <div class="arrows">
 
-          <button id="prev">
-            <</button>
-              <button id="next">></button>
+          <button id="prev" class=" flex items-center justify-center">
+            <ion-icon name="chevron-back-outline"></ion-icon>
+          </button>
 
+          <button id="next" class=" flex items-center justify-center">
+            <ion-icon name="chevron-forward-outline"></ion-icon>
+          </button>
         </div>
 
       </div>
@@ -135,33 +138,35 @@
 
     <div id="pro-wrapper" class="pro-wrapper flex flex-wrap justify-evenly w-full gap-14">
       <% products.forEach(product=> {%>
-        <% if(product.shoppingCategory === 'Women') {%>
-        <a href="/product/show/productId=<%=product.id%>"><div class="pro-card w-[290px] h-[400px] bg-gray-100 p-3 rounded-md">
-          <img class="h-[290px] rounded-xl w-full shadow-lg shadow-gray-400 object-cover" src="<%= product.image %>"
-            alt="pro1" />
-          <div class="mt-4">
-            <h1 class="text-zinc-800 font-semibold">
-              <%= product.title %>
-            </h1>
+        <% if(product.shoppingCategory==='Women' ) {%>
+          <a href="/product/show/productId=<%=product.id%>">
+            <div class="pro-card w-[290px] h-[400px] bg-gray-100 p-3 rounded-md">
+              <img class="h-[290px] rounded-xl w-full shadow-lg shadow-gray-400 object-cover" src="<%= product.image %>"
+                alt="pro1" />
+              <div class="mt-4">
+                <h1 class="text-zinc-800 font-semibold">
+                  <%= product.title %>
+                </h1>
 
-            <h2 class="text-gray-500">
-              <%= product.category %>
-            </h2>
-            <span class="text-teal-600 text-xl font-bold"><b class="text-gray-600">Rs. </b>
-              <%= product.price %>
-            </span>
-          </div>
-        </div>
-      </a>
-      <%}%>
-        <%});%>
+                <h2 class="text-gray-500">
+                  <%= product.category %>
+                </h2>
+                <span class="text-teal-600 text-xl font-bold"><b class="text-gray-600">Rs. </b>
+                  <%= product.price %>
+                </span>
+              </div>
+            </div>
+          </a>
+          <%}%>
+            <%});%>
     </div>
   </main>
 
   <!-- product addition khatam ho gaya -->
 </body>
 <!-- javascripts -->
-<script src="/javascripts/home.js"></script>
+<script src="/javascripts/women.js"></script>
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
 </html>
