payment method added

--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -147,6 +147,10 @@
                 <br />
 
                 <hr />
+                <br>
+                <p>Payment Method : Cash on Delivery</p>
+                <br>
+                <hr>
                 <form action="/product/order-placed" method="GET">
                   <button class="w-44 mt-10 bg-indigo-700 hover:bg-indigo-800 py-3 text-white text-xl rounded-full">
                     Place Order &nbsp;&nbsp; &#10132;
