--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,141 +1,176 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=DynaPuff:wght@400;500&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap");
-
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-@layer utilities {
-  * {
-    padding: 0%;
-    margin: 0%;
-  }
-
-  html,
-  body {
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    background-color: #09090b;
-  }
-
-  .delay-2000 {
-    animation-delay: 2000ms;
-  }
-
-  .delay-5000 {
-    animation-delay: 5000ms;
-  }
-
-  /* Hide scrollbar for Chrome, Safari, and Opera */
-  .no-scrollbar::-webkit-scrollbar {
-    display: none;
-  }
-
-  /* Hide scrollbar for IE, Edge, and Firefox */
-  .no-scrollbar {
-    -ms-overflow-style: none; /* IE and Edge */
-    scrollbar-width: none; /* Firefox */
-  }
+main {
+  padding: 0 5%;
 }
 
-.poppins-light {
-  font-family: "Poppins", sans-serif;
-  font-weight: 300;
-  font-style: normal;
-}
-
-.poppins-regular {
-  font-family: "Poppins", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
-.poppins-medium {
-  font-family: "Poppins", sans-serif;
-  font-weight: 500;
-  font-style: normal;
-}
-
-.poppins-semibold {
-  font-family: "Poppins", sans-serif;
-  font-weight: 600;
-  font-style: normal;
-}
-
-.category {
-  display: flex;
-  width: fit-content;
-}
-
-.gender {
-  z-index: 30;
-  padding: 2px;
-  width: 140px;
-  height: 40px;
-  cursor: pointer;
-  color: azure;
-  border: 0px;
-  border-bottom: 5px solid transparent;
-  background-color: rgba(0, 0, 0, 0.8);
-  backdrop-filter: blur(10px);
-  font-family: "Poppins", sans-serif;
-  font-size: larger;
-  font-weight: 600;
-}
-
-.bottomnavbar {
-  position: sticky;
-  top: 0px;
-  left: 0px;
-  height: 90px;
-  padding: 0% 5%;
-  display: flex;
-  overflow: hidden;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px 5%;
-  background-color: rgba(255, 255, 255, 0.3);
-  backdrop-filter: blur(5px);
-}
-
-.navLink {
-  display: flex;
-  align-items: center;
-  font-size: larger;
-  font-weight: 600;
-}
-
-.navLink a {
-  color: inherit;
-  text-decoration: none;
-  height: 36px;
-  transition: 0.3s ease;
-}
-
-.navLink a:hover,
-.navLink a.active {
+.carousel {
   position: relative;
-  color: #a3e635;
+  height: 600px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  border: none;
+  overflow: hidden;
 }
 
-.navLink a.active::after,
-.navLink a:hover::after {
-  content: "";
-  width: 70%;
-  height: 2px;
-  background-color: #a3e635;
+.carousel .list .item {
   position: absolute;
-  bottom: 0px;
-  left: 0px;
+  inset: 0 0 0 0;
 }
 
-.navLink .link {
+.carousel .list .item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: top;
+}
+
+.thumbnail {
   display: flex;
-  gap: 25px;
+  gap: 20px;
+  position: absolute;
+  bottom: 10px;
+  left: 70%;
+  height: 250px;
+  z-index: 10;
+  width: max-content;
 }
 
-ion-icon {
-  width: 30px;
-  height: 30px;
+.thumbnail .item {
+  height: 100%;
+  width: 350px;
+  object-fit: cover;
+  border-radius: 20px;
+}
+
+.arrows {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  z-index: 10;
+  width: 300px;
+  bottom: 15%;
+  left: 60%;
+}
+
+.arrows button {
+  width: 60px;
+  height: 60px;
+  cursor: pointer;
+  border-radius: 50%;
+  background-color: rgba(187, 184, 184, 0.6);
+  border: none;
+  font-family: monospace;
+  color: #fff;
+  font-weight: bold;
+  font-size: 1.5rem;
+  transition: 0.5s;
+}
+
+.arrows button:hover {
+  background-color: #eee;
+  /* background-color: black; */
+  background: rgb(108, 72, 255);
+  background: linear-gradient(
+    180deg,
+    rgb(126, 94, 255) 0%,
+    rgba(239, 235, 255, 1) 100%
+  );
+  color: #555;
+}
+
+.carousel .list .item:nth-child(1) {
+  z-index: 1;
+}
+
+.carousel .list .item:nth-child(1) img {
+  position: absolute;
+  left: 70%;
+  bottom: 10px;
+  height: 250px;
+  width: 350px;
+  object-fit: cover;
+  border-radius: 20px;
+  animation: showImg 0.5s ease 1 forwards;
+}
+
+@keyframes showImg {
+  to {
+    width: 100%;
+    height: 100%;
+    left: 0%;
+    bottom: 0;
+    border-radius: 0;
+  }
+}
+
+/* effect next click */
+.carousel.next .thumbnail .item:nth-last-child(1) {
+  width: 0;
+  overflow: hidden;
+  animation: showThumbnail 0.5s linear 1 forwards;
+}
+@keyframes showThumbnail {
+  to {
+    width: 350px;
+  }
+}
+
+.carousel.next .thumbnail {
+  transform: translateX(150px);
+  animation: tranformThumbnail 0.5s linear 1 forwards;
+}
+@keyframes tranformThumbnail {
+  to {
+    transform: translateX(0px);
+  }
+}
+
+/* effect prev click */
+.carousel.prev .list .item:nth-child(2) {
+  z-index: 2;
+}
+
+.carousel.prev .list .item:nth-child(2) img {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  animation: outImg 0.5s linear 1 forwards;
+}
+
+@keyframes outImg {
+  to {
+    width: 350px;
+    height: 250px;
+    border-radius: 20px;
+    left: 70%;
+    bottom: 10px;
+  }
+}
+
+.carousel.prev .thumbnail .item:nth-child(1) {
+  width: 0px;
+  animation: showThumbnail 0.5s linear 1 forwards;
+}
+
+
+/* progress bar below carousel */
+.timer {
+  position: absolute;
+  z-index: 100;
+  bottom: 0;
+  left: 0;
+  width: 0%;
+  height: 5px;
+  background-color: #8b5cf6;
+}
+
+.carousel .timer.progress {
+  width: 100%;
+  animation: timeRunning 6s linear 1 forwards;
+}
+
+@keyframes timeRunning {
+  to {
+    width: 0;
+  }
 }
