--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -65,7 +65,7 @@
             <% cartinfo.forEach(item=> { %>
 
               <div class="card flex items-center bg-zinc-900/50 rounded-lg">
-                <img class="h-36 scale-[0.8] object-cover rounded-lg" src="<%=item.product.image%>" alt="product" />
+                <img class="h-36 scale-[0.8] object-cover rounded-lg" src="/<%=item.product.image%>" alt="product" />
 
                 <div class="flex flex-col gap-3 md:flex-row md:gap-14 w-full px-4 md:px-6 justify-between">
                   <div class="flex flex-col gap-2 font-poppins font-medium">
