--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -65,7 +65,7 @@
             <% cartinfo.forEach(item=> { %>
 
               <div class="card flex items-center bg-zinc-900/50 rounded-lg">
-                <img class="h-36 scale-[0.8] object-cover rounded-lg" src="/<%=item.product.image%>" alt="product" />
+                <img class="h-36 scale-[0.8] object-cover rounded-lg" src="<%=item.product.image%>" alt="product" />
 
                 <div class="flex flex-col gap-3 md:flex-row md:gap-14 w-full px-4 md:px-6 justify-between">
                   <div class="flex flex-col gap-2 font-poppins font-medium">
@@ -169,21 +169,37 @@
         </div>
   </main>
   <%}else{%>
-
+    
     <section
-      class="my-10 poppins-medium flex flex-col items-center space-y-4 w-full bg-zinc-900/30 p-6 md:p-10 rounded-xl">
-      <div>
-        <h1 class="w-fit text-[2rem] text-transparent bg-clip-text bg-gradient-to-r from-indigo-500 to-orange-400">
-          Cart's on a diet, shedding items like confetti at a celebration!
-        </h1>
-
-        <div class=" flex justify-center w-full h-96">
-          <img class=" w-96 h-96" src="/images/admin/cart.gif" alt="">
-        </div>
+    class="my-10 poppins-medium flex flex-col items-center space-y-4 w-full bg-zinc-900/30 p-6 md:p-10 rounded-xl">
+    <div>
+      <h1 class="w-fit text-[2rem] text-transparent bg-clip-text bg-gradient-to-r from-indigo-500 to-orange-400">
+        Cart's on a diet, shedding items like confetti at a celebration!
+      </h1>
+      
+      <div class=" flex justify-center w-full h-96">
+        <img class=" w-96 h-96" src="/images/admin/cart.gif" alt="">
       </div>
-    </section>
+    </div>
+  </section>
+  <%}%>
+  <%}%>
+  <% if(!noShow) {%>
+        
+    <section
+    class="my-10 poppins-medium flex flex-col items-center space-y-4 w-full bg-zinc-900/30 p-6 md:p-10 rounded-xl">
+    <div>
+      <h1 class="w-fit text-[2rem] text-transparent bg-clip-text bg-gradient-to-r from-indigo-500 to-orange-400">
+        Cart's on a diet, shedding items like confetti at a celebration!
+      </h1>
+      
+      <div class=" flex justify-center w-full h-96">
+        <img class=" w-96 h-96" src="/images/admin/cart.gif" alt="">
+      </div>
+    </div>
+  </section>
     <%}%>
-      <%}%>
+
         <script>
       <% if (flash.success && flash.success.length > 0) {%>
             new Noty({
